NetBSD Problem Report #53158

From www@NetBSD.org  Thu Apr  5 18:11:23 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 69EFD7A159
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  5 Apr 2018 18:11:23 +0000 (UTC)
Message-Id: <20180405181122.8F0357A1DA@mollari.NetBSD.org>
Date: Thu,  5 Apr 2018 18:11:22 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/arm/sunxi/sunxi_tcon.c:143: suspicious compare ?
X-Send-Pr-Version: www-1.0

>Number:         53158
>Category:       port-arm
>Synopsis:       src/sys/arch/arm/sunxi/sunxi_tcon.c:143: suspicious compare ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Apr 05 18:15:00 +0000 2018
>Closed-Date:    Fri Apr 06 08:24:17 +0000 2018
>Last-Modified:  Fri Apr 06 08:25:01 +0000 2018
>Originator:     David Binderman
>Release:        cvs-20180405
>Organization:
>Environment:
>Description:
src/sys/arch/arm/sunxi/sunxi_tcon.c:143]: (style) Same expression on both sides of '||'.

Source code is

    if (sc->sc_clk_ahb == NULL || sc->sc_clk_ch0 == NULL
        || sc->sc_clk_ch0 == NULL) {

Maybe better code

    if (sc->sc_clk_ahb == NULL || sc->sc_clk_ch0 == NULL
        || sc->sc_clk_ch1 == NULL) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: bouyer@NetBSD.org
State-Changed-When: Fri, 06 Apr 2018 08:24:17 +0000
State-Changed-Why:
Fixed, thanks !


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53158 CVS commit: src/sys/arch/arm/sunxi
Date: Fri, 6 Apr 2018 08:23:40 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Fri Apr  6 08:23:40 UTC 2018

 Modified Files:
 	src/sys/arch/arm/sunxi: sunxi_tcon.c

 Log Message:
 Fix bad cut'n'paste, pointed out by David Binderman in PR port-arm/53158


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/arch/arm/sunxi/sunxi_tcon.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.