Fix bad cut'n'paste, pointed out by David Binderman in PR port-arm/53158